# smartjobs

./: .env.example  .gitignore  Dockerfile  Dockerignore  README.md  deployment_gcp.md  docker-compose.yml  langfuse_prompts.json  pyproject.toml
dataset/processed/: chunks_preview.jsonl  jobs_cleaned.jsonl
docs/: multi_agent_schema.md  project_smartjobs.docx  project_smartjobs_requirements.md  sqlite_schema.md  text_to_sql_aman.md
script/: build_qdrant.py  build_sqlite.py
src/smartjobs/: __init__.py  agent.py  chunking.py  config.py  cv.py  errors.py  llm.py  normalizers.py  observability.py  prompt_registry.py  prompts.py  qdrant_store.py  schemas.py  server.py  simulation.py  sql_guard.py  sqlite_store.py
src/smartjobs/agents/: __init__.py  analisis_cv.py  gap_skill.py  konsultasi.py  query_sql.py  rekomendasi_cv.py  search_lowongan.py  supervisor.py
tests/: test_api_output.py  test_config_port_alias.py  test_llm_intent_router.py  test_llm_retry_settings.py  test_normalizers.py  test_qdrant_point_id.py  test_server_llm_requirement.py  test_settings_llm_runtime_fields.py  test_sql_guard.py  test_sql_summary.py  test_sqlite_store.py  test_supervisor.py
